# design-patterns

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  design-patterns.cpp  design-patterns.sln  design-patterns.vcxproj  design-patterns.vcxproj.filters  sonar-project.properties
doc/: Doxyfile
doc/issues/: to-do.txt
include/: command.hpp
include/architectural/: mvc.hpp
include/behavioral/: chain-of-responsibility.hpp  command.hpp  interpreter.hpp  iterator.hpp  mediator.hpp  memento.hpp  null-object.hpp  observer.hpp  state.hpp  strategy.hpp  template-method.hpp  visitor.hpp
include/behavioral/observer/: generic-observer.hpp  iobserver.hpp  observer-others.hpp  observer-weak-msg.hpp  observer-weak-multi.hpp  weak-callback-subject.hpp
include/concurrency/: mvc.hpp
include/cpp-idiom/: attorney-client.hpp  copy-n-swap.hpp  crtp.hpp  d-pointer.hpp  erase-remove.hpp  named-parameter-type.hpp  named-parameter.hpp  non-virtual-interface.hpp  opaque-pointer.hpp  pimpl-example.hpp  pimpl-macros.hpp  pimpl.hpp  sfinae.hpp
include/creational/: abstract-factory.hpp  builder.hpp  dependency-injection.hpp  factory-method.hpp  lazy-initialization.hpp  object-pool.hpp  prototype.hpp  singleton.hpp
include/general/: general.hpp  ieditor.hpp
include/header-collection/: ai-headers.hpp  all-headers.hpp  anti-pattern-headers.hpp  architectural-headers.hpp  classic-headers.hpp  concurrency-headers.hpp  cpp-idioms-headers.hpp  database-headers.hpp  distributed-system-headers.hpp  external-com-headers.hpp  external-cpp-utility-headers.hpp  gamedev-headers.hpp  general-headers.hpp  refactoring-headers.hpp  support-headers.hpp  ui-headers.hpp
include/headers/: all-headers.hpp  classic-headers.hpp  cpp-idioms-headers.hpp  gamedev-headers.hpp
include/refactoring/: encapsulate-variable.hpp  extract-method.hpp
include/structural/: adapter.hpp  bridge.hpp  composite.hpp  decorator.hpp  delegation.hpp  facade.hpp  flyweight.hpp  marker.hpp  proxy.hpp
src/behavioral/: command.cpp  observer.cpp  state.cpp  strategy.cpp
src/cpp-idiom/: d-pointer.cpp  opaque-pointer.cpp  pimpl-example.cpp  pimpl.cpp
src/creational/: abstract-factory.cpp  factory-method.cpp  object-pool.cpp  prototype.cpp  singleton.cpp
src/structural/: adapter.cpp
src/support/: design-patterns.cpp
test/general/: general-test.cpp
